--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -156,5 +156,9 @@ releases:
       - hash: 344b423e0192306f28c5948eb780961c1030988c
         repo: openstack/openstackdocstheme
     version: 1.23.1
+  - projects:
+      - hash: fde94a8a865ad58232c449708afb7cb5dc5b3531
+        repo: openstack/openstackdocstheme
+    version: 1.23.2
 repository-settings:
   openstack/openstackdocstheme: {}
