--- a/deliverables/stein/python-neutronclient.yaml
+++ b/deliverables/stein/python-neutronclient.yaml
@@ -6,3 +6,8 @@ team: neutron
 type: client-library
 repository-settings:
   openstack/python-neutronclient: {}
+releases:
+  - projects:
+      - hash: 301aa7e161642727be2428dbb61a4f8132dc8380
+        repo: openstack/python-neutronclient
+    version: 6.10.0
