python-neutronclient 6.9.1 (Rocky)
Change-Id: I7eb9414d0b4f23fca4e872de1b91f9ff156c5782

--- a/deliverables/rocky/python-neutronclient.yaml
+++ b/deliverables/rocky/python-neutronclient.yaml
@@ -15,6 +15,10 @@ releases:
       - hash: d090ea27510db3903e3256ca518b645987edfdc7
         repo: openstack/python-neutronclient
     version: 6.9.0
+  - projects:
+      - hash: 7eba94ee323fef95f4aad3247e12b1eee65e86b4
+        repo: openstack/python-neutronclient
+    version: 6.9.1
 branches:
   - location: 6.9.0
     name: stable/rocky
