--- a/deliverables/stein/oslo.service.yaml
+++ b/deliverables/stein/oslo.service.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/oslo.service: {}
+releases:
+  - projects:
+      - hash: 2705800cd32b383df80f872577ccca2cab6f3522
+        repo: openstack/oslo.service
+    version: 1.32.0
