--- a/deliverables/rocky/neutron.yaml
+++ b/deliverables/rocky/neutron.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: b6314ea6c3df11c6b27cd39844c53b65be0d9060
         repo: openstack/neutron
     version: 13.0.0
+  - projects:
+      - hash: d48b0c15ac97c6644718651ce6e14cae9c32d07b
+        repo: openstack/neutron
+    version: 13.0.1
 cycle-highlights:
   - 'Per TCP/UDP port forwarding on floating IP is supported. Operators can save the
     number of global IP addresses for floating IPs.'
