Support StoryBoard project names in place of IDs
Now that storyboard-webclient no longer displays the project id
number in project URLs by default, it is harder for people to look
them up without referring to the API. Conversely, we could just use
the newer name-based project query support in the API instead. As a
transitional step, support both. Also switch openstack-infra/shade
from id to name to prove that the validate tool change is effective.

Change-Id: I9da97a1af40bb3527c1c7e8a66a267c76b9db564

--- a/deliverables/stein/shade.yaml
+++ b/deliverables/stein/shade.yaml
@@ -1,7 +1,7 @@
 ---
 include-pypi-link: yes
 release-model: cycle-with-intermediary
-storyboard: 760
+storyboard: openstack-infra/shade
 team: OpenStackSDK
 type: library
 repository-settings:
