--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -41,6 +41,10 @@ releases:
       - hash: 9eef1db160521076d8243f1980e681f0f04ecbc6
         repo: openstack/neutron
     version: 12.0.3
+  - projects:
+      - hash: 901d49b4a62eade2c2ddbf6185b262008b1690c6
+        repo: openstack/neutron
+    version: 12.0.4
 repository-settings:
   openstack/neutron: {}
 branches:
