--- a/deliverables/rocky/mistral.yaml
+++ b/deliverables/rocky/mistral.yaml
@@ -53,6 +53,14 @@ releases:
       - hash: 0d193dab2b4e13b06fd8822308c3aee202e370c4
         repo: openstack/mistral-extra
     version: 7.0.0
+  - projects:
+      - hash: 2309e5265a1d5f28480ae872817b5de05f66e83c
+        repo: openstack/mistral
+      - hash: 55e9a7ac2908f41b5f1b2258a0913372a1a3fbcd
+        repo: openstack/mistral-dashboard
+      - hash: ab11582d10aaf6b9e731896c0a8705fc8a361272
+        repo: openstack/mistral-extra
+    version: 7.0.1
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
