--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -167,5 +167,9 @@ releases:
       - hash: 9b1c353bd05459a54293e06b3b4f5f0bb04e9ff8
         repo: openstack/reno
     version: 2.10.0
+  - projects:
+      - hash: 355e1674be8c37e67f59e8bcd39bf7d6a0aac792
+        repo: openstack/reno
+    version: 2.11.0
 repository-settings:
   openstack/reno: {}
