--- a/deliverables/pike/octavia.yaml
+++ b/deliverables/pike/octavia.yaml
@@ -39,6 +39,10 @@ releases:
       - hash: 5c2d2d2e5c665312f380061ddaead6d7d47d9737
         repo: openstack/octavia
     version: 1.0.2
+  - projects:
+      - hash: 4871cd0ca658aeef93f14fcc5cc8fd972568fbb7
+        repo: openstack/octavia
+    version: 1.0.3
 branches:
   - location: 1.0.0.0rc1
     name: stable/pike
