networking-(bagpipe|bgpvpn) queens update
A release is needed to ship a few bug fixes, and
to wrap up the fixes for bug 1789878.

Change-Id: I6f639e3e3f2bd486eddbb8427675c18058b9a94e

--- a/deliverables/queens/networking-bagpipe.yaml
+++ b/deliverables/queens/networking-bagpipe.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: 81589f55f2a9fa7bf3bf39d4318c68a868cc75cf
         repo: openstack/networking-bagpipe
     version: 8.0.0
+  - projects:
+      - hash: f3a7c421a31abe769347cc306cc87c68c28e2dfb
+        repo: openstack/networking-bagpipe
+    version: 8.0.1
 repository-settings:
   openstack/networking-bagpipe: {}
 branches:
