--- a/deliverables/queens/networking-bgpvpn.yaml
+++ b/deliverables/queens/networking-bgpvpn.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: cc671c8871a896d09f598235741f7f938b9f4b8f
         repo: openstack/networking-bgpvpn
     version: 8.0.0
+  - projects:
+      - hash: ca0a16f0ba55fdbd6fb34423fbce4e15366f2ff8
+        repo: openstack/networking-bgpvpn
+    version: 8.0.1
 repository-settings:
   openstack/networking-bgpvpn: {}
 branches:
