networking-(bagpipe|bgpvpn) rocky update
In particular to wrap up the fix for bug 1789878.

Change-Id: I9a667f5de6600cac8bbe4d3270400dedbe13075c

--- a/deliverables/rocky/networking-bagpipe.yaml
+++ b/deliverables/rocky/networking-bagpipe.yaml
@@ -28,6 +28,10 @@ releases:
       - hash: ae8e8ce1e7a12faa9ab7abb8fcfdb21765c367e8
         repo: openstack/networking-bagpipe
     version: 9.0.0
+  - projects:
+      - hash: 6150dccbc763a8d5b5ff22c2bbbcec8527e7213d
+        repo: openstack/networking-bagpipe
+    version: 9.0.1
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
