--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -160,5 +160,9 @@ releases:
       - hash: fde94a8a865ad58232c449708afb7cb5dc5b3531
         repo: openstack/openstackdocstheme
     version: 1.23.2
+  - projects:
+      - hash: 01b0dd27389c374464da77696fc08b8a37e42ca3
+        repo: openstack/openstackdocstheme
+    version: 1.24.0
 repository-settings:
   openstack/openstackdocstheme: {}
