--- a/deliverables/queens/mistral.yaml
+++ b/deliverables/queens/mistral.yaml
@@ -62,6 +62,14 @@ releases:
       - hash: 72f1ddebb4bec021bc0551a01d885444b4139be0
         repo: openstack/mistral
     version: 6.0.3
+  - projects:
+      - hash: 24cb2daea626b66f06b5899ccaeefacd3d68928f
+        repo: openstack/mistral
+      - hash: 1734cdf479b70643155e421635e3e7d443cffcaa
+        repo: openstack/mistral-dashboard
+      - hash: e761742f652a981eddf8ea3b50e2eabea3ca6b97
+        repo: openstack/mistral-extra
+    version: 6.0.4
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
