--- a/deliverables/rocky/networking-ovn.yaml
+++ b/deliverables/rocky/networking-ovn.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 44dcb509be15a805e00684cce2fabfc4c5265ad7
         repo: openstack/networking-ovn
     version: 5.0.0
+  - projects:
+      - hash: 09eef8de9906ae9bfbd7a68818199693cf3d1b51
+        repo: openstack/networking-ovn
+    version: 5.0.1
 branches:
   - location: 5.0.0.0rc1
     name: stable/rocky
