--- a/deliverables/rocky/mistral.yaml
+++ b/deliverables/rocky/mistral.yaml
@@ -61,6 +61,10 @@ releases:
       - hash: ab11582d10aaf6b9e731896c0a8705fc8a361272
         repo: openstack/mistral-extra
     version: 7.0.1
+  - projects:
+      - hash: e50fbfbdd903340402716dc306f5c5354b9060ab
+        repo: openstack/mistral
+    version: 7.0.2
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
