--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -164,5 +164,9 @@ releases:
       - hash: 01b0dd27389c374464da77696fc08b8a37e42ca3
         repo: openstack/openstackdocstheme
     version: 1.24.0
+  - projects:
+      - hash: 39e7704612eab5353c7a63e7ac49b29634883943
+        repo: openstack/openstackdocstheme
+    version: 1.24.1
 repository-settings:
   openstack/openstackdocstheme: {}
