nova: release rocky 18.0.1
Change-Id: Ia10e74886a08887631834e5af4d4943cee7efe6e

--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -36,6 +36,10 @@ releases:
       - hash: 5bff489231c16e62f081267a5b433745dba12ded
         repo: openstack/nova
     version: 18.0.0
+  - projects:
+      - hash: 1f1482eb7d1d386d44b72269efbc2d4e320f73a2
+        repo: openstack/nova
+    version: 18.0.1
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
