nova: release queens 17.0.6
Change-Id: I5506c3f8dd03bfe266af66959a6d9fff81c7f7b0

--- a/deliverables/queens/nova.yaml
+++ b/deliverables/queens/nova.yaml
@@ -57,6 +57,10 @@ releases:
       - hash: 8ea98c56b647526aae7a786531e934eeee7a90a2
         repo: openstack/nova
     version: 17.0.5
+  - projects:
+      - hash: ddb90b8a2d402f8f2ab5598978294c3179bbf30a
+        repo: openstack/nova
+    version: 17.0.6
 cycle-highlights:
   - |
     The performance of listing instances across a multi-cell cells v2
