nova: release pike 16.1.5
Change-Id: I8611b08f9b8ad2e1942d1519dd225a7d9053f5d7

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -69,5 +69,9 @@ releases:
       - hash: 43cac615f6a0a4399c7bf3dda6c2595749f27ace
         repo: openstack/nova
     version: 16.1.4
+  - projects:
+      - hash: d9ad26d61999f47adfecc5dcdc89c67bf9e95f4e
+        repo: openstack/nova
+    version: 16.1.5
 repository-settings:
   openstack/nova: {}
