--- a/deliverables/queens/congress.yaml
+++ b/deliverables/queens/congress.yaml
@@ -29,6 +29,10 @@ releases:
       - repo: openstack/congress
         hash: f26f54774f598fa41d6fb0b8b01054330b5aee31
     version: 7.0.0
+  - version: 7.0.1
+    projects:
+      - repo: openstack/congress
+        hash: 2a6e9b9630cf31b17003bd0b0e98c748553f81ac
 repository-settings:
   openstack/congress: {}
 branches:
