--- a/deliverables/ocata/ironic.yaml
+++ b/deliverables/ocata/ironic.yaml
@@ -32,5 +32,9 @@ releases:
       - hash: 00914c802ded15a6ad4643a1a8b277a5342ed5a6
         repo: openstack/ironic
     version: 7.0.5
+  - projects:
+      - hash: 6c107103790b52e11e9d6029fd3e948bd0ce33d6
+        repo: openstack/ironic
+    version: 7.0.6
 repository-settings:
   openstack/ironic: {}
