--- a/deliverables/ocata/ironic-python-agent.yaml
+++ b/deliverables/ocata/ironic-python-agent.yaml
@@ -16,5 +16,9 @@ releases:
       - hash: 5707c35b4186395e9dfb7818656d8e4929f0613c
         repo: openstack/ironic-python-agent
     version: 2.0.1
+  - projects:
+      - hash: c7068c19aaae368b020e20d184890116641a58a2
+        repo: openstack/ironic-python-agent
+    version: 2.0.2
 repository-settings:
   openstack/ironic-python-agent: {}
