--- a/deliverables/ocata/ironic-lib.yaml
+++ b/deliverables/ocata/ironic-lib.yaml
@@ -32,5 +32,9 @@ releases:
     projects:
       - repo: openstack/ironic-lib
         hash: ace87b6eb39d7aab46301a1309b899c3635854e8
+  - projects:
+      - hash: 99b3182e347fa886debab410284a157d6a3223ca
+        repo: openstack/ironic-lib
+    version: 2.5.3
 repository-settings:
   openstack/ironic-lib: {}
