[rally] Propose 1.2.0 release
Depends-On: I34eca39cc5a4f444932bcacb598cfcc5749bd5be
Change-Id: I2e819d51d962e89d84bfcdf4cc24326b80e1d4f0

--- a/deliverables/_independent/rally.yaml
+++ b/deliverables/_independent/rally.yaml
@@ -118,5 +118,9 @@ releases:
     projects:
       - repo: openstack/rally
         hash: b5ba6d5ea9f8de68f0772453e55dc7da4d98884a
+  - version: 1.2.0
+    projects:
+      - repo: openstack/rally
+        hash: f58317fe8b3a517914ad0ea39b14f53ebb2e6477
 repository-settings:
   openstack/rally: {}
