Oslo releases for 2018-9-19
Omitting oslo.messaging because it has some major version changes
in flight and we want to release all of them at once.

Change-Id: I56aa9816410965b15a58ae330853a2c4f4af830b

--- a/deliverables/stein/castellan.yaml
+++ b/deliverables/stein/castellan.yaml
@@ -5,3 +5,8 @@ type: library
 release-model: cycle-with-intermediary
 repository-settings:
   openstack/castellan: {}
+releases:
+  - projects:
+      - hash: 8f112b9afbbc949c80f57a4f33df4e68ae9ea620
+        repo: openstack/castellan
+    version: 0.20.0
