--- a/deliverables/stein/oslo.db.yaml
+++ b/deliverables/stein/oslo.db.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/oslo.db: {}
+releases:
+  - projects:
+      - hash: e64c6bb6970b61b9f8aa704c5b2ac6e1f9c382d3
+        repo: openstack/oslo.db
+    version: 4.41.0
