--- a/deliverables/stein/oslo.versionedobjects.yaml
+++ b/deliverables/stein/oslo.versionedobjects.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/oslo.versionedobjects: {}
+releases:
+  - projects:
+      - hash: 50474adf278c79e74c2dc44733f5b6158ba5e7d8
+        repo: openstack/oslo.versionedobjects
+    version: 1.34.0
