TripleO rocky rc2 release
Change-Id: I3e2cd1bbf35fcdfd4fd4d119229a7de82fb45e1e

--- a/deliverables/rocky/instack-undercloud.yaml
+++ b/deliverables/rocky/instack-undercloud.yaml
@@ -23,6 +23,10 @@ releases:
       - hash: ed96987af5a77579366b27a44d94442f33cd811a
         repo: openstack/instack-undercloud
     version: 9.3.0
+  - projects:
+      - hash: b0205abf6c2107b23772d9915a89ea81276de924
+        repo: openstack/instack-undercloud
+    version: 9.4.0
 branches:
   - location: 9.3.0
     name: stable/rocky
