--- a/deliverables/rocky/python-tripleoclient.yaml
+++ b/deliverables/rocky/python-tripleoclient.yaml
@@ -31,6 +31,10 @@ releases:
       - hash: 9ec31e0e5f2d6f14086bf39c35ccc5c1f44b66e1
         repo: openstack/python-tripleoclient
     version: 10.5.0
+  - projects:
+      - hash: 5b00837494686c9b843d6a54d0bba6c5b397876a
+        repo: openstack/python-tripleoclient
+    version: 10.6.0
 branches:
   - location: 10.5.0
     name: stable/rocky
