--- a/deliverables/rocky/tripleo-common.yaml
+++ b/deliverables/rocky/tripleo-common.yaml
@@ -27,6 +27,10 @@ releases:
       - hash: 18be01a01158de42914654bad23eceb3b65b6da7
         repo: openstack/tripleo-common
     version: 9.3.0
+  - projects:
+      - hash: 37d946fbc3be2908b9a277acd1ba29ceab80f0be
+        repo: openstack/tripleo-common
+    version: 9.4.0
 branches:
   - location: 9.3.0
     name: stable/rocky
