--- a/deliverables/rocky/tripleo-heat-templates.yaml
+++ b/deliverables/rocky/tripleo-heat-templates.yaml
@@ -23,6 +23,10 @@ releases:
       - hash: 1bdefbe59d6f933773cbc366c57c5887ebf18833
         repo: openstack/tripleo-heat-templates
     version: 9.0.0.0rc1
+  - projects:
+      - hash: 888743ce76920740e720452c4f0b1c3edf9c3062
+        repo: openstack/tripleo-heat-templates
+    version: 9.0.0.0rc2
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
