--- a/deliverables/rocky/tripleo-puppet-elements.yaml
+++ b/deliverables/rocky/tripleo-puppet-elements.yaml
@@ -23,6 +23,10 @@ releases:
       - hash: d9df3a3e2dbc910d335e5cc166a93b93ba2ad8b6
         repo: openstack/tripleo-puppet-elements
     version: 9.0.0.0rc1
+  - projects:
+      - hash: daf9069c71bfe9369be6f8be13859b6fd807c821
+        repo: openstack/tripleo-puppet-elements
+    version: 9.0.0.0rc2
 branches:
   - location: 9.0.0.0rc1
     name: stable/rocky
