--- a/deliverables/ocata/cinder.yaml
+++ b/deliverables/ocata/cinder.yaml
@@ -64,5 +64,10 @@ releases:
       - hash: 921070a5fe6746ec10f7c1103d3ef47ac30a7ff8
         repo: openstack/cinder
     version: 10.0.7
+  - projects:
+      - hash: 2dc52153215bb6a37532a959c5c98239be21bb56 
+        repo: openstack/cinder
+    version: 10.0.8
+
 repository-settings:
   openstack/cinder: {}
