TripleO queens release
Change-Id: I606d608986da20f724b902b02ce5ce1efc76c121

--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -41,6 +41,10 @@ releases:
       - hash: 2f32d629d2c43b0f4148b2ef2c40a659233e0baf
         repo: openstack/instack-undercloud
     version: 8.4.4
+  - projects:
+      - hash: a23bfb79cc50b6fb803a9307be4b09d7e80b195c
+        repo: openstack/instack-undercloud
+    version: 8.4.5
 repository-settings:
   openstack/instack-undercloud: {}
 branches:
