--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -40,6 +40,10 @@ releases:
       - hash: 1628943271b647f9eb088a565f7d10fd1f3aa5e2
         repo: openstack/puppet-tripleo
     version: 8.3.5
+  - projects:
+      - hash: 60eb50f46070fe3151e23f78fe335adf53417df2
+        repo: openstack/puppet-tripleo
+    version: 8.3.6
 repository-settings:
   openstack/puppet-tripleo: {}
 branches:
