--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -49,6 +49,10 @@ releases:
       - hash: 878e5376d3a72afb851108a92c50dfa9c15ee6f8
         repo: openstack/tripleo-common
     version: 8.6.4
+  - projects:
+      - hash: 2e3a2a5cc30e3133f33977446efd65acd4a335a7
+        repo: openstack/tripleo-common
+    version: 8.6.5
 cycle-highlights:
   - |
     config-download: Ability to use Ansible to apply the cloud configuration.
