--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -50,6 +50,10 @@ releases:
       - hash: 300f6f3b765680efa234bdfd0ddc500ef9e3d83c
         repo: openstack/tripleo-heat-templates
     version: 8.0.5
+  - projects:
+      - hash: 8537f0230216097a3b6760f0d4636ba6854dcb6b
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.6
 repository-settings:
   openstack/tripleo-heat-templates: {}
 branches:
