--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -44,6 +44,10 @@ releases:
       - hash: 87d25a3cdec23c1f6e4274489b4f5e8ff9f0860a
         repo: openstack/python-tripleoclient
     version: 9.2.4
+  - projects:
+      - hash: 9b837182d131d1720d03ecf424f53d189a260eab
+        repo: openstack/python-tripleoclient
+    version: 9.2.5
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/queens.html
 repository-settings:
   openstack/python-tripleoclient: {}
