--- a/deliverables/queens/tripleo-validations.yaml
+++ b/deliverables/queens/tripleo-validations.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: c6f61b2a4489e3b3d1e0bfd224e2f87c27a36e86
         repo: openstack/tripleo-validations
     version: 8.4.2
+  - projects:
+      - hash: f45639211efd4235a3680f653c70f5dd0fd1f6aa
+        repo: openstack/tripleo-validations
+    version: 8.4.3
 repository-settings:
   openstack/tripleo-validations: {}
 branches:
