TripleO pike release
Change-Id: I4162606de7df1303df4aa241ff160cf49b7ef56c

--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -50,6 +50,10 @@ releases:
       - hash: e401e784c8f9523a9b2ee3e47e5676e976bd43c5
         repo: openstack/os-net-config
     version: 7.3.6
+  - projects:
+      - hash: 62bd8bc1ac689bc48b8dd93dbff7fe01aed4f43b
+        repo: openstack/os-net-config
+    version: 7.3.7
 team: tripleo
 type: other
 repository-settings:
