--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -85,6 +85,10 @@ releases:
       - hash: da382cdf991bc3b3d9e0d56b20229f29507632a2
         repo: openstack/puppet-tripleo
     version: 7.4.15
+  - projects:
+      - hash: be813537697c273c67b6cf4e5e0116f9ddf54bbd
+        repo: openstack/puppet-tripleo
+    version: 7.4.16
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
