--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -70,6 +70,10 @@ releases:
       - hash: fe1c0092755ab910b6b900d47dfc9e1e9cc5abd6
         repo: openstack/python-tripleoclient
     version: 7.3.12
+  - projects:
+      - hash: 375f6a20b3c2335c482f2d5f66b961a2dab67656
+        repo: openstack/python-tripleoclient
+    version: 7.3.13
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
