--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -98,6 +98,10 @@ releases:
       - hash: 6f15c96eb0d14a891fc0db3ede20b77622a4573b
         repo: openstack/tripleo-common
     version: 7.6.15
+  - projects:
+      - hash: 92d69ae43ab559e618c963b27751c1cc9e2d5211
+        repo: openstack/tripleo-common
+    version: 7.6.16
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
