--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -91,6 +91,10 @@ releases:
       - hash: 541a525924ee4c06e823ce52e97fc93b260877f1
         repo: openstack/tripleo-heat-templates
     version: 7.0.15
+  - projects:
+      - hash: b25af6fdc6b9228f791854e442033360ac79f34f
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.16
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
