--- a/deliverables/queens/ironic.yaml
+++ b/deliverables/queens/ironic.yaml
@@ -32,6 +32,10 @@ releases:
       - hash: 21b199b586959cdedd92543a3d1bf2252907f67c
         repo: openstack/ironic
     version: 10.1.4
+  - projects:
+      - hash: 011bd1d5b6b7d922f58202a9e673c31f3ba2a233
+        repo: openstack/ironic
+    version: 10.1.5
 branches:
   - location: 10.1.0
     name: stable/queens
