--- a/deliverables/queens/networking-ovn.yaml
+++ b/deliverables/queens/networking-ovn.yaml
@@ -39,6 +39,10 @@ releases:
       - hash: 3b0a4cd9e1c510201df851a72fec0670f75bb1e7
         repo: openstack/networking-ovn
     version: 4.0.2
+  - projects:
+      - hash: 52abcac1f2f55d93b34a36e4b8fbb6a56845b7a4
+        repo: openstack/networking-ovn
+    version: 4.0.3
 repository-settings:
   openstack/networking-ovn: {}
 branches:
