Oslo Rocky stable releases
Change-Id: I624b968856d591e9fc179a0c26fd11f7f78f8005

--- a/deliverables/rocky/oslo.log.yaml
+++ b/deliverables/rocky/oslo.log.yaml
@@ -23,6 +23,10 @@ releases:
       - hash: 3b43002a3172d990cf48304dd743c97162ece1f3
         repo: openstack/oslo.log
     version: 3.39.0
+  - projects:
+      - hash: 871d2df290d829b9cafb0dc383dc3d65810c2dac
+        repo: openstack/oslo.log
+    version: 3.39.1
 branches:
   - location: 3.39.0
     name: stable/rocky
