--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -51,6 +51,10 @@ releases:
       - hash: 7dc76843114b21d280c27bab9d7776d7f37e3569
         repo: openstack/oslo.messaging
     version: 8.1.0
+  - projects:
+      - hash: a85094b5c5d39cd1496e022f36fc04db7192f153
+        repo: openstack/oslo.messaging
+    version: 8.1.1
 branches:
   - location: 8.1.0
     name: stable/rocky
