--- a/deliverables/rocky/oslo.privsep.yaml
+++ b/deliverables/rocky/oslo.privsep.yaml
@@ -15,6 +15,10 @@ releases:
       - hash: d510207740f59345db9a46c3b64bc078148e869a
         repo: openstack/oslo.privsep
     version: 1.29.0
+  - projects:
+      - hash: f7ba0aa49a35bcb1e6c67dbe3dc22cf33ccc436b
+        repo: openstack/oslo.privsep
+    version: 1.29.1
 branches:
   - location: 1.29.0
     name: stable/rocky
