--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -27,6 +27,10 @@ releases:
       - hash: 62d4119dac47ab31e924a62ee2184e32e8d9fb02
         repo: openstack/oslo.service
     version: 1.31.3
+  - projects:
+      - hash: 67a8a8c7f5c606bd1ef394069d6a4969d21ae3a5
+        repo: openstack/oslo.service
+    version: 1.31.4
 branches:
   - location: 1.31.3
     name: stable/rocky
