--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: eea496b2ec8ba87c8519a79fdb3311e25e833422
         repo: openstack/oslo.messaging
     version: 5.35.1
+  - projects:
+      - hash: 95bcaca4b9775afa9aab62406c0e28b7793f25a6
+        repo: openstack/oslo.messaging
+    version: 5.35.2
 branches:
   - name: stable/queens
     location: 5.35.0
