--- a/deliverables/pike/oslo.messaging.yaml
+++ b/deliverables/pike/oslo.messaging.yaml
@@ -81,6 +81,10 @@ releases:
       - hash: 2a567ca60715beaf213c13f6dfd4e1af55279cda
         repo: openstack/oslo.messaging
     version: 5.30.4
+  - projects:
+      - hash: d03b85e9d63702bbf0c416603f2f705e772dc7da
+        repo: openstack/oslo.messaging
+    version: 5.30.5
 branches:
   - name: stable/pike
     location: 5.30.0
