--- a/deliverables/ocata/oslo.messaging.yaml
+++ b/deliverables/ocata/oslo.messaging.yaml
@@ -49,5 +49,9 @@ releases:
       - hash: e1ac7f8862425e5a8f9b96e28234a0b59e579dbd
         repo: openstack/oslo.messaging
     version: 5.17.3
+  - projects:
+      - hash: 4b568352eb9498edac70c428e8638f50bb034789
+        repo: openstack/oslo.messaging
+    version: 5.17.4
 repository-settings:
   openstack/oslo.messaging: {}
