nova: release ocata 15.1.4
Change-Id: Ied72f7ef25524de35a8938e324d90fe1e47a10c8

--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -81,5 +81,9 @@ releases:
       - hash: 7af016cd02d2268b55ebd125678a01b7ef4f883f
         repo: openstack/nova
     version: 15.1.3
+  - projects:
+      - hash: 72ab303ef493b29b70654b681749269eb4bbe2c4
+        repo: openstack/nova
+    version: 15.1.4
 repository-settings:
   openstack/nova: {}
