--- a/deliverables/rocky/openstack-ansible.yaml
+++ b/deliverables/rocky/openstack-ansible.yaml
@@ -147,6 +147,10 @@ releases:
       - hash: 05542c3d590af366028e61de5a26640178277df1
         repo: openstack/openstack-ansible
     version: 18.0.0.0rc2
+  - projects:
+      - hash: 090a76b7e4d98d28d3248ae355916dd152f624d4
+        repo: openstack/openstack-ansible
+    version: 18.0.0.0rc3
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
