--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -869,6 +869,10 @@ releases:
       - hash: 36ff3eb13b42a5ad90b1e8e00f6f0a10fdd1c8d1
         repo: openstack/openstack-ansible
     version: 17.1.0
+  - projects:
+      - hash: af0be26b13ef1e28732ee0b7e8bbbf1c1a8d1732
+        repo: openstack/openstack-ansible
+    version: 17.1.1
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
