--- a/deliverables/ocata/openstack-ansible.yaml
+++ b/deliverables/ocata/openstack-ansible.yaml
@@ -2212,6 +2212,10 @@ releases:
       - hash: 4b3862c191b7d980a7ca4cb739f184acb727f869
         repo: openstack/openstack-ansible
     version: 15.1.26
+  - projects:
+      - hash: 9dd290a6ffafa8ea60b8e6851224899652e62809
+        repo: openstack/openstack-ansible
+    version: 15.1.27
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
