--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,10 @@ setenv =
    LOGDIR={envdir}/log
    TMPDIR={envdir}/tmp
    PYTHON=coverage run --source openstack_releases --parallel-mode
+   OS_STDOUT_CAPTURE=1
+   OS_STDERR_CAPTURE=1
+   OS_DEBUG=1
+   OS_LOG_CAPTURE=1
 basepython = python3
 deps = -r{toxinidir}/test-requirements.txt
 commands =
