Cut new release of ironic-lib
It exposes a new parameter conv_flags to work_on_disk method,
that will allow to modify the behaviour of image copying from
the original image to the target.

Change-Id: I1144303ea89d7c0ac3661a8434413ecb8a2ec6c6

--- a/deliverables/stein/ironic-lib.yaml
+++ b/deliverables/stein/ironic-lib.yaml
@@ -6,3 +6,8 @@ release-model: cycle-with-intermediary
 include-pypi-link: yes
 repository-settings:
   openstack/ironic-lib: {}
+releases:
+  - projects:
+      - hash: 712da6c465e8794b3575b34a6eb1c5d3061a9b44
+        repo: openstack/ironic-lib
+    version: 2.15.0
